simplifying and improving struture